--- a/.github/workflows/deployBicepFile.yml
+++ b/.github/workflows/deployBicepFile.yml
@@ -18,5 +18,5 @@ jobs:
           subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
           resourceGroupName: ${{ secrets.AZURE_RG }}
           template: ./main.bicep
-          parameters: "storagePrefix=breyr-sa storageSKU=Standard_LRS"
+          parameters: "storagePrefix=breyrsa storageSKU=Standard_LRS"
           failOnStdErr: false
